# DataFlowAuto

./: Dockerfile  README.md  executa_atualizacao.sh  log_cron.txt  pyproject.toml
DataFlowPx/: crontab.txt
DataFlowPx/dataflowpx/: app.py  auth.py  database.py  models.py  settings.py
DataFlowPx/tests/: test.py
dataflowpx/: app.py  auth.py  database.py  models.py  settings.py
