[project]
name = "dataflowpx"
version = "0.1.0"
description = ""
authors = [
    {name = "yedsrjr",email = "edsonr065@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
]

[tool.poetry]
packages = [{include = "dataflowpx", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
